--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+reporttools_1.0.3 (, 2009)
+---------------------------------
+- removed 'summary' command from tableContinuous and tableDate
+- added option to use weights and subset to tableContinuous, tableDate, tableNominal
+
 reporttools_1.0.2 (March 4, 2009)
 ---------------------------------
 - Changed input argument 'disp.cols' to 'stats' in tableContinuous
