--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+reporttools_1.0.8
+---------------------------------
+- Updated package to new testing framework on CRAN.
+
 reporttools_1.0.7
 ---------------------------------
 - Added function displayCoxPH()
