--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+reporttools_1.1.2
+---------------------------------
+- Properly import globals.
+
 reporttools_1.1.1
 ---------------------------------
 - Added function addLineBreak().
